// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installing update when started renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            data-testid="app-update-not-available"
          >
            No new updates available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update when started when user checks for updates renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            class="Spinner singleColor"
          />
          <div
            data-testid="app-update-checking"
          >
            Checking for updates...
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update when started when user checks for updates when new update is discovered renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            data-testid="app-update-downloading"
          >
            Downloading version some-version...
          </div>
          <div
            class="Spinner singleColor"
          />
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update when started when user checks for updates when new update is discovered when download fails renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
        <button
          class="updateButton"
          data-testid="update-button"
          data-warning-level="light"
          id="update-lens-button"
        >
          Update
          <i
            class="Icon icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="arrow_drop_down"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            data-testid="app-update-download-failed"
          >
            Download of update failed
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update when started when user checks for updates when new update is discovered when download succeeds renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
        <button
          class="updateButton"
          data-testid="update-button"
          data-warning-level="light"
          id="update-lens-button"
        >
          Update
          <i
            class="Icon icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="arrow_drop_down"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            data-testid="app-update-available"
          >
            some-version is available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update when started when user checks for updates when no new update is discovered renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            data-testid="app-update-not-available"
          >
            No new updates available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;
